[package]
name = "piler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
logos = "0.14.0"
variantly = "0.4.0"

[build-dependencies]
lalrpop = "0.20.0"
